--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>personal.boweiliu</groupId>
+  <groupId>org.opentechfin</groupId>
   <artifactId>stockanalysis</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -53,7 +53,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>personal.boweiliu</groupId>
+      <groupId>org.opentechfin</groupId>
       <artifactId>stockanalysis</artifactId>
       <version>1.0-SNAPSHOT</version>
       <type>test-jar</type>
