--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -1,4 +1,9 @@
-timeseries : {
-  timestampStrList : ["2017-04-06T09:30:00", "2017-04-06T09:31:00", "2017-04-06T09:32:00"]
-  valueList : [34.05, 8934.33, 3.3]
+
+# database
+cassandra {
+  DATE_COL_NAME : "exchange_date",
+  SEC_OF_DAY_COL_NAME : "second_of_day";
+
+  STOCK_KEY_SPACE : "test_stock_key_space"
+  STOCK_COL_FAMILY : "stock_col_family"
 }
